docs: redesign run/test/debug as capture-replay against .lathe/ bytecode
Rewrite the post-M3 run/test/debug design from "spawn Maven per invocation"
to "capture Maven's fork launch once, replay it ourselves against .lathe/".

Why the change:
Delegating each run to `mvnd test` forces the -am dilemma — without -am the
reactor resolves stale target/classes, with -am it recompiles the whole
upstream reactor every run. Both reintroduce exactly what Lathe's .lathe/
bytecode model (design §5-6) exists to eliminate. Capturing Maven's computed
launch and rewriting reactor outputs to .lathe/<rel>/ gives -am-level
freshness with no recompilation, so test execution and compilation share one
bytecode image and one freshness guarantee.

How it works:
- Capture: interpose on Surefire's forked JVM via `-Djvm=<shim>`. The shim is
  a thin launcher inside a synthesized capture-JDK home (bin/java + release
  file, as Surefire's jvm validation and version detection require). It detects
  the real fork by ForkedBooter in argv/@argfile, hands the launch to a
  CaptureMain class that writes a TestLaunchData template to
  .lathe/<rel>/test-launch.json, and passes probes through to the real java.
  Capture is Lathe-driven, hidden, and freshness-gated on POM/params
  fingerprints, so it runs rarely.
- Replay: rewrite reactor target/ paths to .lathe/, strip the jacoco agent and
  the Surefire booter, keep JPMS flags verbatim (--module-path, --patch-module,
  --add-reads/opens/modules), swap in Lathe's JUnit Platform launcher and test
  selection, and launch a fresh JVM. Results stream via a TestExecutionListener
  (NDJSON), replacing surefire-reports XML tailing. JDWP is injected directly.

The mechanism, JPMS handling, and replay were validated by a throwaway PoC on
a modular project with mixed JPMS/non-JPMS dependencies: --add-reads/opens
target ALL-UNNAMED (no rewrite needed), junit-platform-launcher is already on
the captured classpath, and a captured line replayed green against a
substit